# smeshing

./: .gitignore  .travis.yml  CMakeLists.txt  COPYING.txt  MANIFEST.in  README.md  README.rst  example.sh  plot.py  requirements.txt  setup.py  smesh  smeshing.py
cmake/: autocmake.yml
cmake/custom/: src.cmake
data/: 2.txt  4.txt
data/bear/: boundary.txt  config.yml  island1.txt  island4.txt
data/fiction/: config.yml  island1.txt  result.txt
data/happy-bear/: boundary.txt  config.yml  generate-resolution-field.py  island2.txt  island3.txt  islands.txt  resolution-field-1.txt  resolution-field-2.txt  resolution_function.py  result.txt
data/lofoten/: boundary.txt  config.yml  island1.txt  simple-boundary.txt
data/resolution/: 1.txt  reference-distances.txt
data/small/: 3.txt
delaunay/: README.md  experiment.py
distmesh/: _distmesh2d.py  benchmark.py  c_interface.py  demo2d.py  distance_functions.py  file_io.py  mlcompat.py  plot.py  plotting.py  test.py  utils.py
distmesh/src/: distance_functions.c  distance_functions.cpp  distance_functions.h
preload/: CMakeLists.txt  custom_functions.cpp
smeshing/: CMakeLists.txt  __init__.py  _distmesh2d.py  bbox.py  benchmark.py  clockwise.py  distance_functions.py  file_io.py  main.py  mlcompat.py  plot.py  resolution.py  resolution_functions.cpp  smeshing.h  test.py  triangulate.py  version.py  view_vectors.py
test/: airfoil.txt  benchmark.txt  circle.txt  draw.py  ellipse.txt  island2.txt  island3.txt  polygon.txt  rectangle.txt  result-bench.txt  result.txt  square.txt  test.txt
(+327 files in other folders)
